appId: ${APP_ID}
env:
  E2E_EMAIL: ${E2E_EMAIL}
  E2E_PASSWORD: ${E2E_PASSWORD}
  CHECKLIST_NAME: ${CHECKLIST_NAME}
---
- launchApp
- runFlow:
    when:
      visible:
        id: "login-email"
    file: login.yaml
- assertVisible:
    text: "Checklists"
- tapOn:
    text: "Checklists"
- tapOn:
    id: "checklist-search"
- inputText: ${CHECKLIST_NAME}
- tapOn:
    text: ${CHECKLIST_NAME}
- waitForAnimationToEnd
- tapOn:
    id: "e2e-select-store"
- tapOn:
    id: "next-button"
- waitForAnimationToEnd
- tapOn:
    id: "e2e-autofill-submit"
- assertVisible:
    text: "Success"
- tapOn:
    text: "Done"
- tapOn:
    text: "History"
- assertVisible:
    text: "Completed"
